[package]
name = "asa_server_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.132" }
serde_yaml_ng = { version = "0.10.0" }
serde      = { version = "1.0.210",  features = ["derive"] }
tokio      = { version = "1.40.0",   features = ["rt-multi-thread", "macros"] }
reqwest    = { version = "0.12.8",   features = ["json"] }
chrono     = { version = "0.4.38" }
openssl    = { version = "0.10.68",  features = ["vendored"] }
